Updated minecraft-scripts permissions

--- a/minecraft/Dockerfile
+++ b/minecraft/Dockerfile
@@ -15,6 +15,7 @@ ADD scripts /opt/minecraft-scripts
 
 # Setup Minecraft Server
 RUN mkdir -p /opt/minecraft && \
+    chmod 700 -R /opt/minecraft-scripts && \
     curl -o /opt/minecraft/server.jar $(curl -qs $(curl -qs https://launchermeta.mojang.com/mc/game/version_manifest.json | jq -r '.versions[0].url') | jq -r '.downloads.server.url') && \
     adduser  --disabled-password --gecos '' --home /opt/minecraft minecraft && \
     chown -R minecraft:minecraft /opt/minecraft && \
