MC test in different directory

--- a/minecraft/Dockerfile
+++ b/minecraft/Dockerfile
@@ -16,7 +16,7 @@ ADD scripts /opt/minecraft-scripts
 # Setup Minecraft Server
 RUN mkdir -p /opt/minecraft && \
     chmod 700 -R /opt/minecraft-scripts && \
-    curl -o /opt/minecraft/server.jar $(curl -qs $(curl -qs https://launchermeta.mojang.com/mc/game/version_manifest.json | jq -r '.versions[0].url') | jq -r '.downloads.server.url') && \
+    curl -o /opt/server.jar $(curl -qs $(curl -qs https://launchermeta.mojang.com/mc/game/version_manifest.json | jq -r '.versions[0].url') | jq -r '.downloads.server.url') && \
     adduser  --disabled-password --gecos '' --home /opt/minecraft minecraft && \
     chown -R minecraft:minecraft /opt/minecraft && \
     echo "eula=true" > /opt/minecraft/eula.txt
