--- a/l4d2/configs/server.cfg
+++ b/l4d2/configs/server.cfg
@@ -13,6 +13,8 @@ sv_gametypes "coop, versus, mutation"
 sm_cvar mp_gamemode coop
 sv_forcepreload 1
 
+z_difficulty hard
+
 mp_disable_autokick "1"
 sv_alltalk "0"
 sv_consistency "1"
