--- a/l4d2/configs/server.cfg
+++ b/l4d2/configs/server.cfg
@@ -9,7 +9,11 @@ sm_cvar survivor_friendly_fire_factor_hard 1
 sm_cvar survivor_friendly_fire_factor_normal 1
 
 sv_gametypes "coop, versus, mutation"
-sm_cvar mp_gamemode coop
+mp_gamemode versus
+sb_all_bot_game 1
+allow_all_bot_survivor_team 1
+vs_max_team_switches 100
+
 sv_forcepreload 1
 
 z_difficulty hard
