--- a/l4d2/configs/server.cfg
+++ b/l4d2/configs/server.cfg
@@ -9,7 +9,7 @@ sm_cvar survivor_friendly_fire_factor_hard 1
 sm_cvar survivor_friendly_fire_factor_normal 1
 
 sv_gametypes "coop, versus, mutation"
-mp_gamemode versus
+sm_cvar mp_gamemode versus
 sb_all_bot_game 1
 allow_all_bot_survivor_team 1
 vs_max_team_switches 100
