--- a/l4d2/configs/server.cfg
+++ b/l4d2/configs/server.cfg
@@ -8,6 +8,8 @@ sm_cvar survivor_friendly_fire_factor_expert 1
 sm_cvar survivor_friendly_fire_factor_hard 1
 sm_cvar survivor_friendly_fire_factor_normal 1
 
+sv_cheats 1
+
 sv_gametypes "coop, versus, mutation"
 sm_cvar mp_gamemode versus
 sb_all_bot_game 1
