--- a/terraria/Dockerfile
+++ b/terraria/Dockerfile
@@ -2,7 +2,7 @@ FROM amazonlinux:latest
 LABEL maintainer="Steven Tan <git@sktan.com>"
 
 ENV TERRARIA_HOME /home/terraria
-ENV TERRARIA_DOWNLOAD http://terraria.org/system/dedicated_servers/archives/000/000/032/original/terraria-server-1353.zip?1515098333
+ENV TERRARIA_DOWNLOAD https://terraria.org/system/dedicated_servers/archives/000/000/036/original/terraria-server-1402.zip?1589675482
 ENV TERRARIA_LOCATION $TERRARIA_HOME/1353/Linux/
 ENV TERRARIA_PASSWORD test123
 
