Potential fixes for libgcc for l4d2

--- a/l4d2/Dockerfile
+++ b/l4d2/Dockerfile
@@ -13,7 +13,7 @@ ENV L4D2_MAP="c1m1_hotel" \
     L4D2_PLAYERS=4 \
     L4D2_DIFFICULTY="Hard"
 
-RUN yum install -y curl tar shadow-utils libgcc.i686 glibc.i686 libc6 gzip git
+RUN yum install -y curl tar shadow-utils libgcc.x86_64 glibc.x86_64 libgcc.i686 glibc.i686 libc6 gzip git
 RUN useradd steam && mkdir -p $SERVER && mkdir -p $STEAMCMD && chown steam:steam $HOME -R
 
 USER steam
