Added ability to add admins in CSV format

--- a/l4d2/Dockerfile
+++ b/l4d2/Dockerfile
@@ -14,7 +14,7 @@ ENV L4D2_MAP="c1m1_hotel" \
     L4D2_FRIENDLYFIRE="1" \
     L4D2_PLAYERS=4 \
     L4D2_DIFFICULTY="Hard" \
-    L4D2_SERVER_PASSWORD="nopasswd" \
+    L4D2_SERVER_ADMINS="noadmins" \
     L4D2_WORKSHOP_IDS=${L4D2_WORKSHOP_IDS:-empty}
 
 RUN yum install -y curl tar shadow-utils libgcc.x86_64 glibc.x86_64 libgcc.i686 glibc.i686 libc6 gzip git python3
