Updated CSGO image to include warmod by default

--- a/csgo/Dockerfile
+++ b/csgo/Dockerfile
@@ -16,9 +16,14 @@ RUN cd $STEAMCMD && ./steamcmd.sh +runscript install.txt
 ADD practice.cfg $SERVER/csgo/cfg/practice.cfg
 ADD autoexec.cfg $SERVER/csgo/cfg/autoexec.cfg
 
+RUN curl -L 'https://sourcemod.net/latest.php?version=1.11&os=linux' | tar -vxz -C $SERVER/csgo && \
+    curl -L 'https://www.metamodsource.net/latest.php?version=1.11&os=linux' | tar -xzv -C $SERVER/csgo && \
+    curl -L 'https://warmod.bitbucket.io/plugins/warmod.smx' -o $SERVER/csgo/addons/sourcemod/plugins/warmod.smx
+
 EXPOSE 27015/udp
 EXPOSE 27015/tcp
 
 WORKDIR /home/steam/csgo
 ENTRYPOINT ["./srcds_run"]
-CMD ["-console" "-usercon" "+game_type" "0" "+game_mode" "1" "+mapgroup" "mg_active" "+map" "de_cache"]
+CMD ["-console" "-usercon" "-tickrate" "128" "+game_type" "0" "+game_mode" "1" "+mapgroup" "mg_active" "+map" "de_cache"]
+
