--- a/csgo/Dockerfile
+++ b/csgo/Dockerfile
@@ -1,21 +1,14 @@
-FROM ubuntu:16.04
-MAINTAINER Steven Tan <git@sktan.com>
+FROM registry.gitlab.steamos.cloud/steamrt/sniper/platform:latest
 
-ENV HOME /home/steam
+ENV HOME /home/steamrt
 ENV SERVER $HOME/csgo
 ENV STEAMCMD $HOME/steamcmd
 
-RUN apt-get update && apt-get -y install lib32stdc++6 lib32gcc1 curl
-RUN useradd steam && mkdir $HOME && mkdir $SERVER && mkdir $STEAMCMD && chown steam:steam $HOME -R
+ADD steamcmd $STEAMCMD/
+RUN cd $STEAMCMD && curl -s https://steamcdn-a.akamaihd.net/client/installer/steamcmd_linux.tar.gz | tar -vxz && \
+    ./steamcmd.sh +runscript install.txt && cd .. && rm -rf $STEAMCMD
 
-USER steam
-
-RUN cd $STEAMCMD && curl -s https://steamcdn-a.akamaihd.net/client/installer/steamcmd_linux.tar.gz | tar -vxz
-ADD install.txt $STEAMCMD/install.txt
-RUN cd $STEAMCMD && ./steamcmd.sh +runscript install.txt
-ADD practice.cfg $SERVER/csgo/cfg/practice.cfg
-ADD autoexec.cfg $SERVER/csgo/cfg/autoexec.cfg
-
+ADD cfg $SERVER/csgo/cfg/
 RUN curl -L 'https://sourcemod.net/latest.php?version=1.11&os=linux' | tar -vxz -C $SERVER/csgo && \
     curl -L 'https://www.metamodsource.net/latest.php?version=1.11&os=linux' | tar -xzv -C $SERVER/csgo && \
     curl -L 'https://warmod.bitbucket.io/plugins/warmod.smx' -o $SERVER/csgo/addons/sourcemod/plugins/warmod.smx
@@ -23,7 +16,6 @@ RUN curl -L 'https://sourcemod.net/latest.php?version=1.11&os=linux' | tar -vxz 
 EXPOSE 27015/udp
 EXPOSE 27015/tcp
 
-WORKDIR /home/steam/csgo
+WORKDIR /home/steamrt/csgo
 ENTRYPOINT ["./srcds_run"]
 CMD ["-console" "-usercon" "-tickrate" "128" "+game_type" "0" "+game_mode" "1" "+mapgroup" "mg_active" "+map" "de_cache"]
-
