--- a/csgo/cfg/autoexec.cfg
+++ b/csgo/cfg/autoexec.cfg
@@ -1,6 +1,8 @@
 log on
 hostname "Counter-Strike: Global Offensive Dedicated Server"
 sv_password ""
+rcon_password ""
+sv_setsteamaccount ""
 sv_cheats 0
 sv_lan 0
 
