CS2 doesn't need user login anymore

--- a/cs2/Dockerfile
+++ b/cs2/Dockerfile
@@ -12,9 +12,8 @@ ENV CS2_HOSTNAME "My CS2 Server" \
     CS2_MAP "de_dust2" \
     CS2_PORT 27015
 
-RUN --mount=type=secret,id=csgoinstall,dst=/home/steamrt/steamcmd/install.txt mkdir -p $STEAMCMD && cd $STEAMCMD && \
-    curl -s https://steamcdn-a.akamaihd.net/client/installer/steamcmd_linux.tar.gz | tar -vxz && \
-    find . -name "*steamclient.so" && exit 1 && \
+ADD steamcmd $STEAMCMD/
+RUN cd $STEAMCMD && curl -s https://steamcdn-a.akamaihd.net/client/installer/steamcmd_linux.tar.gz | tar -vxz && \
     ./steamcmd.sh +runscript install.txt && cd .. && rm -rf $STEAMCMD
 
 WORKDIR /home/steamrt/cs2/game/bin/linuxsteamrt64/cs2
