Fix missing steamclient.so

--- a/cs2/Dockerfile
+++ b/cs2/Dockerfile
@@ -14,7 +14,9 @@ ENV CS2_HOSTNAME "My CS2 Server" \
 
 ADD steamcmd $STEAMCMD/
 RUN cd $STEAMCMD && curl -s https://steamcdn-a.akamaihd.net/client/installer/steamcmd_linux.tar.gz | tar -vxz && \
-    ./steamcmd.sh +runscript install.txt && cd .. && rm -rf $STEAMCMD
+    ./steamcmd.sh +runscript install.txt && \
+    mkdir -p $HOME/.steam/sdk64 && cp $STEAMCMD/linux64/steamclient.so $HOME/.steam/sdk64/steamclient.so && \
+    cd .. && rm -rf $STEAMCMD
 
 WORKDIR /home/steamrt/cs2/game/bin/linuxsteamrt64
 ADD --chown=steamrt:steamrt server.sh $SERVER/game/bin/linuxsteamrt64/server.sh
