Updated DST to latest run script

--- a/dontstarvetogether/Dockerfile
+++ b/dontstarvetogether/Dockerfile
@@ -17,6 +17,8 @@ RUN cd $STEAMCMD && curl -s https://steamcdn-a.akamaihd.net/client/installer/ste
     cd $STEAMCMD && ./steamcmd.sh +runscript install.txt
 
 WORKDIR ${SERVER}/bin
+ADD dst.sh ${SERVER}/bin
+RUN chmod +x ${SERVER}/bin/dst.sh
 EXPOSE 10999/udp
 
-ENTRYPOINT [ "./dontstarve_dedicated_server_nullrenderer" ]
+ENTRYPOINT [ "./dst.sh" ]
