Updated DST to latest run script

--- a/dontstarvetogether/Dockerfile
+++ b/dontstarvetogether/Dockerfile
@@ -17,7 +17,7 @@ RUN cd $STEAMCMD && curl -s https://steamcdn-a.akamaihd.net/client/installer/ste
     cd $STEAMCMD && ./steamcmd.sh +runscript install.txt
 
 WORKDIR ${SERVER}/bin
-ADD dst.sh ${SERVER}/bin
+ADD dst.sh ${SERVER}/bin/dst.sh
 RUN chmod +x ${SERVER}/bin/dst.sh
 EXPOSE 10999/udp
 
